convert from double to bigdecimal

--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -26,3 +26,8 @@ ldap.test.user.domain=system
 
 admins.registers=:uid=admin,ou=system:email@email.com;jfba:ba07577081531:email@email.com;jfba:ba06017691554:email@email.com
 error.notify.technical.emails=none
+
+provision.rate.decimo=0.0909;
+provision.rate.ferias=0.0909;
+provision.rate.abFerias=0.0303
+provision.rate.multaFgts=0.0349
