--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -33,3 +33,8 @@ ldap.secundary.host=172.20.3.2
 spring.flyway.locations=classpath:db/migrations
 spring.flyway.baseline-on-migrate=true
 spring-boot-starter-flyway=true
+
+provision.rate.decimo=0.0909;
+provision.rate.ferias=0.0909;
+provision.rate.abFerias=0.0303
+provision.rate.multaFgts=0.0349
