--- a/backend/src/main/resources/application-test.properties
+++ b/backend/src/main/resources/application-test.properties
@@ -32,3 +32,8 @@ ldap.test.user.domain=system
 spring.flyway.locations=classpath:db/migrations
 spring.flyway.baseline-on-migrate=true
 spring-boot-starter-flyway=true
+
+provision.rate.decimo=0.0909;
+provision.rate.ferias=0.0909;
+provision.rate.abFerias=0.0303
+provision.rate.multaFgts=0.0349
