--- a/backend/src/main/resources/application-test.properties
+++ b/backend/src/main/resources/application-test.properties
@@ -1,8 +1,9 @@
 spring.datasource.url=${TEST_SERFI_CONTAS_DB_URL}
 spring.datasource.username=${TEST_SERFI_CONTAS_DB_USER}
 spring.datasource.password=${TEST_SERFI_CONTAS_DB_PASSWORD}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.open-in-view=false
 server.port = 8082
